update pagination GetDocuments
